--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "no desc",
   "main": "index.js",
+  "engines": {
+  "node": "10.16.3",
+  "npm": "6.9.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Tim Dons",
   "license": "ISC",
