--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "PythonWebSocket",
   "version": "1.0.0",
   "engines": {
-    "node": "6.2.0"
+  "node": "10.16.3",
+  "npm": "6.9.0"
   },
   "description": "",
   "main": "index.js",
